fix: responsive image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3417,6 +3417,7 @@ blockquote {
 @media screen and (max-width: 479px) {
   .profile-image {
     width: 100%;
+    max-height: 100%;
   }
 
   .profile-name {
